# vibefluent

./: .env.template  .gitignore  README.md  constants.py  conversation.py  database.py  drill.py  llm_agent_factory.py  main.py  models.py  onboard.json  onboarding.py  prompt_manager.py  pyproject.toml  realtime_audio_conversation.py  requirements.txt  vocab_import.py
templates/: conversation_system_prompt.j2  conversation_turn_analysis_prompt.j2  initial_question_prompt.j2  realtime_conversation_turn_analysis_prompt.j2  realtime_session_config.j2  realtime_vocab_extraction_prompt.j2  vocab_extraction_prompt.j2
