[project]
name = "vibefluent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "logfire>=3.16.1",
    "openai-realtime-client>=0.1.0",
    "pandas>=2.3.0",
    "pydantic-ai>=0.2.12",
    "sqlalchemy>=2.0.41",
]
